--- a/算法 第四版/排序算法/4 希尔排序.md
+++ b/算法 第四版/排序算法/4 希尔排序.md
@@ -2,7 +2,53 @@
 
 插入排序的一种变种。
 
+先看下面的图了解希尔排序的实际步骤：
+
+图一：
+
+![](img\shellsort_2.jpg)
+
+图二：
+
+![](img\shellsort_1.jpg)
+
+有个增量序列，对于每个增量：
+
+- 从数组第一个元素开始，把每隔增量的元素划成一组；
+
+  - 把这一组排序
+
+    
+
+- 从数组第二个元素开始，把每隔增量的元素划成一组；
+
+  - 把这一组排序
+
+    
+
+- 重复这样的操作，直到有一组的最后一个元素为数组末尾
+
+  - 把这一组排序
+
+```
+for(每个增量序列){
+    for()
+}
+```
+
+
+
+
+
+从上面的步骤来看，感觉就像有  `增量序列.length`  把多齿的梳子，每把梳子齿的数量为每个增量，每把梳子梳理若干遍。
+
+从步骤来看，希尔排序算法的比较和交换这两个基本操作的数量取决于 **增量序列** 和 **数组自身的有序状态**。
+
+目前，复杂度与增量序列的关系在数学上还没有一个精确的描述，只能分析某些增量序列的复杂度。
+
 ```java
 
 ```
+
+
 
