--- a/bilibili 邹博 算法/1 最大子数组.md
+++ b/bilibili 邹博 算法/1 最大子数组.md
@@ -159,3 +159,13 @@ to == from,结果为：-5
 -->最后的结果为：18
 ```
 
+##### 时间复杂度分析：
+
+`T(n)=2*T(n/2)+cn`，其中，`2*T(n/2)`表示m1和m2的计算，`cn`表示后面for循环
+
+![](img\2.jpg)
+
+
+
+
+
