--- a/剑指offer 2/2 单例模式.md
+++ b/剑指offer 2/2 单例模式.md
@@ -44,7 +44,7 @@ public class Singleton{
 **缺点：所有的线程都需要先判断一下，在获取实例，降低了性能。**
 
 ~~~java
-public static Singleton(){
+public class Singleton(){
     private Singeleton(){}
     private static Singleton instance = null;
     
@@ -56,4 +56,106 @@ public static Singleton(){
     } 
 }
 ~~~
+
+
+
+#### 3、饿汉式，双重校验锁，线程安全（<font color="red">推荐</font>）
+
+​	**比方法2更好的地方在于：不是所有的线程调用`getInstance()`都会加同步锁，`instance`已经存在就不加了，比方法2更加高效。**
+
+
+
+`volatile`的效果：
+
+- 如果主存`instance`改变了值，线程不会从自己的线程内存去取`instance`的值，而是从主存取值。保证了主存的`instance`对其他线程的可见性，和一致性。
+- 防止代码执行顺序的调整，保证线程安全。
+
+```java
+public class Singleton(){
+    private Singeleton(){}
+    private volatile static Singleton instance = null;
+    
+    public static Singleton getInstance(){
+        if(instance==null){
+            synthronized(Singleton.class){
+                if(instance==null){
+                    instance = new Singleton();
+                }
+            }
+            
+        }
+        return instance;
+    } 
+}
+```
+
+
+
+#### 4、懒汉式，`final`实例和静态代码块
+
+这两种方法都是在类加载的时候，创建的唯一实例。但是，由于是懒汉式，降低了代码的内存使用性能，所以，都不推荐使用。
+
+
+
+**(1)final：在类加载的时候，就创建了唯一一个实例。**
+
+- `static`:只创建一次。
+- `final`：终态，不可更改值，不可重写，初始化必须有值。
+
+```java
+public class Singleton{
+    private final static Singleton instance = new Singleton();
+    private Singleton(){}
+    
+    public static Singleton getInstance(){
+        return instance;
+    }
+}
+```
+
+
+
+**(2)静态代码块：在类加载的时候，就创建了唯一一个实例**
+
+- 静态代码块，在类加载的时候执行（当然只执行一次）
+
+```java
+public class Singleton{
+    private static Singleton instance = null;
+    private Singleton(){}
+    
+    static{
+        instance = new Singleton();
+    }
+    
+    public static Singleton getInstance(){
+        return instance;
+    }
+}
+```
+
+
+
+#### 5、静态内部类，线程安全（<font color="red">推荐</font>）
+
+方法4中两种方法由于采用懒汉式，不推荐。那么，如果自己不先创建，而是让别的类先创建唯一实例，用的时候再取，就解决了这个问题。
+
+```java
+public class Singleton{
+    private Singleton(){}
+    
+    private final static class SingletonHolder{
+        private static final Singele instance = new Singleton();
+    }
+    
+    public static Singleton5 getInstance() {
+            return SingletonHolder.instance;
+    }
+    
+}
+```
+
+
+
+
 
