--- a/剑指offer 2/3 不重复数字.md
+++ b/剑指offer 2/3 不重复数字.md
@@ -62,3 +62,6 @@ public int getDuplication(int[] nums){
 和原来的二分查找法略有不同，原来是要查找的`key`和`nums[mid]`的值，决定了`end和start`。
 
 现在的这个算法，没有刚开始没有key。先划分了一半数据，进行条件比较。
+
+**复杂度分析**： 二分查找法需要执行`countRange()`  方法` O(logN) `次，每一次需要`O(N)`，总的复杂度为`O(NlogN)`。并且不需要额外的空间。
+
