--- a/剑指offer 2/7 重建二叉树.md
+++ b/剑指offer 2/7 重建二叉树.md
@@ -4,3 +4,83 @@
 
 输入某二叉树的前序遍历和中序遍历的结果，请重建该二叉树。假设输入的前序遍历和中序遍历的结果中都不含重复的数字，例如输入前序遍历序列`{1,2,4,7,3,5,6,8}`和中序遍历序列`{4,7,2,1,5,3,8,6}`，重建二叉树并输出根节点。
 
+**解法：**
+
+- 前序遍历数组的第一个值，是根节点，它把中序遍历切分为左子树和右子树
+- 和前面的步骤一样，因此，利用递归生成二叉树
+
+
+
+~~~java
+public class BuildBinaryTree {
+
+	//二叉树的定义
+	public static class BinaryTree{
+		int value;
+		BinaryTree left;
+		BinaryTree right;
+	}
+	
+	//总方法
+	public static BinaryTree construct(int[] preOrder, int[] inOrder) {
+		if(preOrder==null || inOrder==null || preOrder.length!=inOrder.length || preOrder.length<1) 
+			return null;
+		
+		return construct(preOrder, 0, preOrder.length-1, inOrder, 0, inOrder.length-1);
+	}
+	
+	/**
+	 * 
+	 * 递归产生二叉树
+	 * 
+	 * @param preOrder 前序遍历数组
+	 * @param ps 开始下标
+	 * @param pe 结束下标
+	 * @param inOrder 中序遍历数组
+	 * @param is 开始下标
+	 * @param ie 结束下标
+	 * @return
+	 */
+	public static BinaryTree construct(int[] preOrder, int ps, int pe, int[] inOrder, int is, int ie) {
+		
+		//最极端的情况就是等于了，大于的时候已经出界了
+		if(ps>pe) {
+			return null;
+		}
+		
+		//前序遍历数组的第一个节点，必然是头节点
+		int value = preOrder[ps];
+		BinaryTree node = new BinaryTree();
+		node.value = value;
+		
+		//在中序遍历数组中，找到上面的头节点，这个点把中序遍历数组分割成左子树和右子树
+		int index=is;
+		while(index<=ie && inOrder[index]!=value) {
+			index++;
+		}
+		
+		//如果在中序遍历数组中找不到，那肯定提供的数据有问题
+		if(index>ie) {
+			throw new RuntimeException("invalid input");
+		}
+		
+		//递归生成左子树和右子树，画个图很清晰
+		node.left = construct(preOrder, ps+1, ps+index-is, inOrder, is, index-1);
+		node.right = construct(preOrder, ps+index-is+1, pe, inOrder, index+1, ie);
+		
+		return node;
+	}
+	
+	
+	//中序遍历打印二叉树
+	public static void printTree(BinaryTree root) {
+		if(root != null) {
+			printTree(root.left);
+			System.out.println(root.value + " ");
+			printTree(root.right);
+		}
+	}
+	
+}
+~~~
+
