--- a/剑指offer 2/8 二叉树的下一个节点.md
+++ b/剑指offer 2/8 二叉树的下一个节点.md
@@ -1,3 +1,46 @@
 ## 8、二叉树的下一个节点
 
 **题目：**给定一个二叉树和其中一个节点，如何找出中序遍历序列的下一个节点？树中的节点除了有两个分别指向做、右节点的指针，还有一个指向父节点的指针。
+
+
+
+**解法：**
+
+- 中序遍历，先访问左子树，然后是中间节点，最后是右子树。
+- 如果有个节点想找中序遍历的下一个节点，那么，一个肯定的事实是：
+  - 它的左子树已经先于它被访问了
+  - 它自己就是中间节点
+  - 下一个节点肯定从右子树开始找
+- 既然从右子树开始查找，那就分为：
+  - 有右子树：直接找右子树最左端的节点
+  - 无右子树：
+    - 这个节点是它父节点的左节点，返回父节点
+    - 这个节点是它父节点的右节点，那就坑了。正因为它是父节点的右节点，那么这个父节点已经被中序遍历访问过了。那么只能继续往上找，直到找到一个节点，这个节点是它父节点的左节点，返回这个节点。
+
+```java
+//定义二叉树
+public class BinaryTree(){
+    int val;
+    BinaryTree left;
+    BinaryTree right;
+    BinaryTree parent;
+}
+
+
+
+public BinaryTree getNext(BinaryTree node){
+    
+    //当前节点为空，或者没有父节点，直接返回吧
+    if(node==null || node.parent==null) return null;
+    
+    if(node.right != null){
+        
+    }else{
+        
+    }
+    
+}
+```
+
+
+
