--- a/剑指offer 2/8 二叉树的下一个节点.md
+++ b/剑指offer 2/8 二叉树的下一个节点.md
@@ -24,21 +24,39 @@ public class BinaryTree(){
     BinaryTree left;
     BinaryTree right;
     BinaryTree parent;
-}
+}    
 
 
-
+//中序遍历二叉树的下一个节点
 public BinaryTree getNext(BinaryTree node){
     
     //当前节点为空，或者没有父节点，直接返回吧
     if(node==null || node.parent==null) return null;
     
+    //如果有右子树，找到右子树的最左端元素
     if(node.right != null){
+        while(node.left != null){
+            node = node.left;
+        }
+        return node;
+    }else{//没有右子树
         
-    }else{
-        
+        //如果是父节点的左节点，返回父节点
+        if(node.parent.left == node){
+            return node.parent;
+        }else{//如果是父节点的右节点，只能往上找
+            while(node.parent.left != node){
+                node = node.parent
+            }
+            
+            //找不到这样的节点，这说明当前节点就是最后一个节点，没有下一个节点了
+            if(node==null){
+                return null;
+            }else{
+                return node;
+            }
+        }
     }
-    
 }
 ```
 
