--- a/剑指offer 2/9 用两个栈实现队列.md
+++ b/剑指offer 2/9 用两个栈实现队列.md
@@ -44,3 +44,17 @@ public class TwoStackToQueue {
 
 ```
 
+
+
+#### 扩展题目：利用两个队列实现栈
+
+- 把队列A中的元素取出，放到队列B，两者的顺序完全一致
+- 如果队列A有10个元素，把9个取出，放入队列B中，返回第十个元素，相当于栈pop()
+- 既实现尾部插入元素，又实现了尾部弹出元素，这就是栈啊！！！
+
+```java
+
+```
+
+
+
