--- a/剑指offer 2/10 斐波那契数列.md
+++ b/剑指offer 2/10 斐波那契数列.md
@@ -1,4 +1,4 @@
-## 题目一：求斐波那契数列的第`n`项
+## 10、求斐波那契数列的第`n`项（青蛙跳台阶 and 矩形组合）
 
 #### 题目：
 
@@ -9,4 +9,102 @@ f(0) = 0;
 f(1) = 1;
 f(n) = f(n-1)+f(n-2);      n>1
 ```
+
+
+
+这道题是来说递归的特点的：
+
+- 代码简洁
+- A：可能存在栈的溢出，每次的函数调用需要在内存栈分配空间，栈的容量是有限的
+- B：重复计算，造成性能低下
+
+
+
+#### 解法一（重复计算）：
+
+```java
+public int Fibonacci(int n){
+    
+    if(n == 0){
+        return 0;
+    }
+    
+    if(n == 1){
+        return 1;
+    }
+    
+    if(n>1){
+        return Fibonacci(n-1) + Fibonacci(n-2);
+    }
+    
+}
+```
+
+
+
+由下图可见，一个可能会计算多次。（这个图过分了）
+
+![](img\10.jpg)
+
+
+
+#### 解法二（推荐）：
+
+```java
+public int Fibonacci(int --n){
+	if(n < 0){
+        return null;
+    }
+    if(n == 0){
+        return 0;
+    }
+    if(n == 1){
+        return 0;
+    }
+    
+    int fibOne = 0;
+    int fibTwo = 1;
+    int fibN = 0;
+    
+    for(int i=3; i<=n; n++){
+        fibN = fibOne + fibTwo;
+        fibOne = fibTwo;
+        fibTwo = fibN;
+    }
+    
+    return fibN;
+}
+```
+
+
+
+#### 扩展题目1：青蛙跳台阶
+
+**题目：**一只青蛙一次可以挑上一级台阶，也可以跳上2级台阶。求该青蛙跳上n级台阶总共有多少种跳法。
+
+```java
+
+```
+
+
+
+#### 扩展题目2：矩形组合
+
+**题目：**可以用2*1的小矩形横着或者竖着，组成更大的矩形。请问组成n倍大的矩形共有多少种组合方式？
+
+```java
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
 
