--- a/剑指offer 2/9 用两个栈实现队列.md
+++ b/剑指offer 2/9 用两个栈实现队列.md
@@ -48,12 +48,55 @@ public class TwoStackToQueue {
 
 #### 扩展题目：利用两个队列实现栈
 
+参见博客：https://blog.csdn.net/darin1997/article/details/88529111
+
 - 把队列A中的元素取出，放到队列B，两者的顺序完全一致
 - 如果队列A有10个元素，把9个取出，放入队列B中，返回第十个元素，相当于栈pop()
 - 既实现尾部插入元素，又实现了尾部弹出元素，这就是栈啊！！！
 
-```java
 
+
+**队列A和队列B的角色会发生转换，所以要设计一个开关`flag`，控制什么时候角色转换。**
+
+```java
+public class DoubleQueueToStack {
+
+	private Queue queue1;
+	private Queue queue2;
+	private boolean flag;
+	
+	public DoubleQueueToStack() {
+		queue1 = new LinkedList();
+		queue2 = new LinkedList();
+		flag = true;
+	}
+	
+	public void push(int a) {
+		if(flag) {
+			queue1.add(a);
+		}else {
+			queue2.add(a);
+		}
+	}
+	
+	public int pop() {
+		if(flag) {
+			return getT(queue1, queue2);
+		}else {
+			return getT(queue2, queue1);
+		}
+	}
+	
+	public int getT(Queue q1, Queue q2) {
+		
+		for(int i=0; i<q1.size()-1; i++) {
+			q2.add(q1.remove());
+		}
+		flag = !flag;
+		return (int) q1.remove();
+	}
+	
+}
 ```
 
 
