--- a/剑指offer 2/10 斐波那契数列.md
+++ b/剑指offer 2/10 斐波那契数列.md
@@ -51,15 +51,18 @@ public int Fibonacci(int n){
 #### 解法二（推荐）：
 
 ```java
-public int Fibonacci(int --n){
-	if(n < 0){
-        return null;
+public int Fibonacci(int n){
+    
+	//问第0个数和第负数个数，那肯定是输错参数了
+    if(n <= 0){
+        return -1;
     }
-    if(n == 0){
-        return 0;
-    }
+    
     if(n == 1){
         return 0;
+    }
+    if(n == 2){
+        return 1;
     }
     
     int fibOne = 0;
@@ -82,8 +85,60 @@ public int Fibonacci(int --n){
 
 **题目：**一只青蛙一次可以挑上一级台阶，也可以跳上2级台阶。求该青蛙跳上n级台阶总共有多少种跳法。
 
-```java
+- n怎么跳，肯定只有两种情况：
+  - 第一次：跳一阶，然后就是`(n-1)`阶台阶的跳法
+  - 第一次：跳二阶，然后就是`(n-2)`阶台阶的跳法
+- 把这两种情况加起来，就是`n`阶台阶怎么跳的总数
+- 这就是斐波那契数列啊！！！
 
+```java
+//迭代
+public int Fibonacci(int n){
+    
+	//问第0个数和第负数个数，那肯定是输错参数了
+    if(n <= 0){
+        return -1;
+    }
+    
+    if(n == 1){
+        return 1;
+    }
+    if(n == 2){
+        return 2;
+    }
+    
+    int fibOne = 1;
+    int fibTwo = 2;
+    int fibN = 0;
+    
+    for(int i=3; i<=n; n++){
+        fibN = fibOne + fibTwo;
+        fibOne = fibTwo;
+        fibTwo = fibN;
+    }
+    
+    return fibN;
+}
+
+
+
+//递归
+public int Fibonacci(int n){
+    
+	//问第0个数和第负数个数，那肯定是输错参数了
+    if(n <= 0){
+        return -1;
+    }
+    
+    if(n == 1){
+        return 1;
+    }
+    if(n == 2){
+        return 2;
+    }
+    
+    return Fibonacci(n-1) +Fibonacci(n-2);
+}
 ```
 
 
@@ -92,11 +147,7 @@ public int Fibonacci(int --n){
 
 **题目：**可以用2*1的小矩形横着或者竖着，组成更大的矩形。请问组成n倍大的矩形共有多少种组合方式？
 
-```java
-
-```
-
-
+和上面两个题一样，就不重复写了。
 
 
 
