--- a/剑指offer 2/11 旋转数组的最小数字.md
+++ b/剑指offer 2/11 旋转数组的最小数字.md
@@ -4,3 +4,66 @@
 
 把一个数组最开始的若干个元素搬到数组的末尾，称之为数组的旋转。输入一个递增排序的数组的一个旋转，输出旋转数组的最小元素。例如，数组{3，4，5，1，2}为{1，2，3，4，5}的一个旋转，该数组的最小值为1。
 
+##### 解法（二分法）：
+
+二分法真的是经典算法
+
+如果遇到`{o,1,1,1,1,1}`的旋转数组，就会发现`low, high, mid`都相等，这时候只能遍历找最小值了。
+
+```java
+public class rotateNumbersMin {
+
+	public static int min(int[] numbers) {
+		
+		if(numbers==null || numbers.length==0) {
+			throw new RuntimeException("Error Input.");
+		}
+		
+		int low = 0;
+		int high = numbers.length - 1;
+		int mid = low;
+		
+		
+		while(numbers[low] >= numbers[high]){
+			
+			//如果两个指针相邻，循环停止，high指针的值就是我们需要的结果
+			if(high - low == 1) {
+				mid = high;
+				break;
+			}
+			
+			mid = low + (high - low)/2;
+			
+			//如果low，high，low三个值都相等，只能通过遍历来查找最小值了
+			if(numbers[low] == numbers[high] && numbers[low]==numbers[mid]) return minInOrder(numbers, ) 
+			
+			//如果中值大于等于numbers[low]，这说明mid指针在第一个序列中
+			if(numbers[mid]>=numbers[low]) {
+				low = mid;
+			}
+			//如果中值小于等于numbers[high]，说名mid指针在第二个序列中
+			else if (numbers[mid] <= numbers[high]) {
+				high = mid;
+			}
+			
+		}
+		
+		return numbers[mid];
+	}
+	
+	
+	//三个指针的值都相等的时候用来遍历查找最小值
+	public static int minInOrder(int[] numbers, int low, int high) {
+		int result = numbers[low]; 
+		for(int i = low+1; i<=high; i++) {
+			if(numbers[i] < result) {
+				result = numbers[i];
+			}
+		}
+		return result;
+	}
+}
+```
+
+
+
