--- a/剑指offer 2/12 矩阵中的路径.md
+++ b/剑指offer 2/12 矩阵中的路径.md
@@ -10,3 +10,114 @@ c  f  c  s
 j  d  e  h
 ```
 
+
+
+**解法：回溯法**
+
+回溯法是暴力法的升级版，它适合每一种选择都有多种情况的问题。它呈现树的结构，把一个选择的多种情况都记录下来，分别尝试不同情况，遇到不符合要求的就返回，符合要求的就继续，直到成功。
+
+回溯法使用递归的办法求解，**递归是指函数自己调用自己。**
+
+
+
+- **从初始节点向符合要求的节点前进，需要根据实际情况判断是从前往后执行，还是从后往前执行。**
+
+- 递归函数有赋值运算，一般是从后往前执行
+
+
+
+本题具体步骤：
+
+- 判断矩阵中的每个点是否符合条件
+- 设计条件函数（核心：递归函数）
+- 由于路径不能重复，设计记录是否被访问的布尔矩阵。
+
+
+
+```java
+public class MatrixRoad {
+
+	public boolean hasPath(char[] matrix, int rows, int cols, char[] str) {
+		
+		if(matrix==null || str==null || rows<=0 || cols<=0) {
+			return false;
+		}
+		
+		boolean[] isVisited = new boolean[rows*cols];
+		for(boolean visited : isVisited) {
+			visited = false;
+		}
+		
+		for(int row=0; row<rows; row++) {
+			for(int col=0; col<cols; col++) {
+				if(hasCorePath(matrix, isVisited, str, 0, rows, cols, 0, 0)) {
+					return true;
+				}
+			}
+		}
+		
+		return false;
+	}
+	
+	/**
+	 * 
+	 * 判断当以某个字母为起点，是否满足路径条件
+	 * 
+	 * @param matrix 原始的字母矩阵
+	 * @param isVisited 记录访问状态的矩阵
+	 * @param str 需要比较的字符串
+	 * @param strLength 字符串的长度
+	 * @param rows 矩阵的总行数
+	 * @param cols 矩阵的总列数
+	 * @param row 当前的行位置
+	 * @param col 当前的列位置
+	 * @return
+	 */
+	public static boolean hasCorePath(char[] matrix, boolean[] isVisited, char[] str, int strLength, int rows, int cols, int row, int col) {
+		
+		//超出界限
+		if(strLength<0 || row>=rows || row<0 || col>=cols || col<0) {
+			return false;
+		}
+		
+		//已经被访问了，就不能再访问
+		if(isVisited[row*rows+col]) {
+			return false;
+		}
+		
+		//字母不一致
+		if(str[strLength] != matrix[row*rows+col]) {
+			return false;
+		}
+		
+		//全部都符合，才是正确的路径
+		if(strLength==strLength-1) {
+			return true;
+		}
+		
+		//如果判断了上面的条件还能继续下去，那么开始访问这个点
+		isVisited[row*rows+col] = true;
+		
+		boolean flag = false;
+		flag = hasCorePath(matrix, isVisited, str, strLength+1, rows, cols, row-1, col) 
+				|| hasCorePath(matrix, isVisited, str, strLength+1, rows, cols, row+1, col)
+				|| hasCorePath(matrix, isVisited, str, strLength+1, rows, cols, row, col-1) 
+				|| hasCorePath(matrix, isVisited, str, strLength+1, rows, cols, row, col+1);
+		
+		//访问失败之后，回退访问状态记录
+		if(!flag) {
+			isVisited[row*rows+col]=false; 
+		}
+		
+		return flag;
+	}
+	
+}
+```
+
+
+
+**用以为数组记录矩阵的方式确实很不错，以前没见过。**
+
+**用布尔矩阵记录访问状态，这是一个非常不错的想法。**
+
