--- a/剑指offer 2/14 剪绳子.md
+++ b/剑指offer 2/14 剪绳子.md
@@ -3,3 +3,107 @@
 #### 题目：
 
 给你一根长度为n的绳子，请把绳子剪成m段（m和 n都是整数，并且m>1，n>1），每段绳子的长度记为k[0]，k[1]，，，k[m]。请问k[0]*k[1]*....k[m]可能的最大乘积是多少？例如，绳子长8，剪成2、3、3的三段，此时的最大乘积是18。
+
+
+
+#### 解法一（动态规划）：
+
+动态规划的特点：
+
+- 一个问题求最优解（最大值或者最小值）
+- 这个问题可以分解成很多相似子问题。
+- 子问题也是求最优解
+- 有原问题分解的子问题发生重叠（也就是分解出了一些相同的子问题）
+- 子问题可以组合成原始问题
+
+
+
+把长度为n的绳子剪成m段，求m段乘积最大：
+
+- 求最大值$Max(k[0]*k[1]*....k[m])$
+- 可以把绳子剪成$f(i)$和$f(n-i)$，再把这两段再次剪成多段
+- $f(i)$子问题，也求最大值
+- n一直剪，最后会剩下多段相同的最短绳子
+- 要想求原问题的最大值，必须要子问题的值最大
+
+
+
+**设计dp数组，下标i对应绳子长i的时候，此时的最大值。对于长度为n的绳子，从前往后计算。**
+
+~~~java
+public int maxProductAfterCutting(int length) {
+		
+		//这三种情况不能由dp数组生成
+		if(length<2) {
+			return 0;
+		}
+		if(length==2) {
+			return 1;
+		}
+		if(length==3) {
+			return 2;
+		}
+		
+		//创建dp数组，并且初始化值。前几个值是最短绳子的值。
+		int[] dp = new int[length+1];
+		dp[0] = 0;
+		dp[1] = 1;
+		dp[2] = 2;
+		dp[3] = 3;
+		
+		for(int i=4; i<=length; i++) {
+			int max = 0;
+			for(int j=1; j<=i/2; j++) {
+				if(max<dp[j]*dp[i-j]) {
+					max = dp[j] * dp[i-j];
+				}
+			}
+			dp[i] = max;
+		}
+		
+		return dp[length+1];
+	}
+~~~
+
+只剪一下，会有 $j<=i/2$  种结果，剪出来的两段分别是最优子问题$dp[j]$和$dp[i-j]$。
+
+**注意：dp数组和自底向上。**
+
+
+
+#### 解法二（贪婪算法）：
+
+这是一种数学证明的办法：如果发现一个子问题，剪成更小的子问题之后比不剪的乘积更大，那么自然选择剪成更多的最小绳子。
+
+当n>=5，每隔3剪一段，此时乘积最大
+
+当n==4，剪成2和2的值，乘积最大（也相当于不剪）
+
+```java
+public int maxProductAfterCutting2(int length) {
+		
+		if(length<2) {
+			return 0;
+		}
+		if(length==2) {
+			return 1;
+		}
+		if(length==3) {
+			return 2;
+		}
+		
+		
+		int timeOf3 = length / 3;
+		
+		//如果最后一段可以剪成4
+		if(length%3==1) {
+			timeOf3 = timeOf3-1;
+		}
+		
+		//2的个数
+		int timeOf2 = (length-timeOf3*3)/2;
+		
+		return (int) (Math.pow(3, timeOf3) + Math.pow(2, timeOf2));
+	}
+```
+
