--- a/剑指offer 2/15 二进制中1的个数.md
+++ b/剑指offer 2/15 二进制中1的个数.md
@@ -80,3 +80,17 @@ public int numberOf13(int n) {
 
 **这种办法不容易想到，解法二才是常规的办法。**
 
+
+
+#### 相关问题：
+
+**1，判断一个整数是不是2的整数次方？**
+
+如果是2的整数次方，那么它的二进制数中只有最左端一个1，右边都是0。可以对这个数减一，与原数进行位与运算，发现结果为0。
+
+
+
+**2，m和n是两个二进制整数，计算m改变多少位能得到n。**
+
+对m和n的二进制数进行异或运算，再统计结果中1的个数。
+
