--- a/剑指offer 2/18 删除链表的节点.md
+++ b/剑指offer 2/18 删除链表的节点.md
@@ -4,3 +4,55 @@
 
 在O(1)时间内删除链表的节点。给定单向链表的头指针和一个结点指针，定义一个函数，在O(1)时间内删除该节点。
 
+#### 解题：
+
+一般的思路就是，遍历找到要删除节点的上一个节点，更改它的next，改成要删除节点的下一个节点，但是这样的复杂度肯定是O(n)。
+
+**如果把要删除节点的下一个节点的value和next都复制过来，再把下一个节点删除，复杂度为O(1)。**
+
+但这样的O(1)的办法存在问题：
+
+- 如果删除最后一个节点，只能遍历查找前一个结点。
+- 如果仅有一个节点，既是头节点，也是尾节点。
+
+```java
+public ListNode deleteOneListNode(ListNode head, ListNode dListNode) {
+		
+		//传入空值，无意义
+		if(head==null || dListNode==null) return null;
+		
+		//既是头节点，也是尾节点
+		if(head==dListNode) return null;
+		
+		//非头非尾节点(A把下一个节点的val和next覆盖要删除的节点  B把next的指向关系从链表摘除)
+		if(dListNode.next != null) {
+			ListNode next = dListNode.next;
+			dListNode.val = next.val;
+			dListNode.next = next.next;
+			next.next = null;
+			return head;
+		}
+		//尾节点
+		else {
+			ListNode p = head;
+			while(p.next != dListNode) {
+				p = p.next;
+			}
+			p.next = null;
+			return head;
+		}
+	}
+```
+
+虽然，尾节点的时候要遍历，但是平均复杂度任然为O(1)。
+
+
+
+#### 附加题目：
+
+**如何删除排序链表中的重复节点？**
+
+
+
+
+
