--- a/剑指offer 2/18 删除链表的节点.md
+++ b/剑指offer 2/18 删除链表的节点.md
@@ -52,6 +52,46 @@ public ListNode deleteOneListNode(ListNode head, ListNode dListNode) {
 
 **如何删除排序链表中的重复节点？**
 
+前一个节点和后一个节点值相同的时候，把两个节点都删除了
+
+```java
+public ListNode deleteDuplicates(ListNode head) {
+        
+        if(head==null || head.next==null) return head;
+
+        //设立哑节点，用来返回值
+        ListNode dummy = new ListNode(0);
+		dummy.next = head;
+
+        ListNode preNode = dummy; //前一个节点
+		ListNode pNode = head; //当前节点
+		
+		
+		while(pNode != null) {
+			ListNode nextNode = pNode.next; 
+            
+            if(nextNode!=null && pNode.val==nextNode.val){
+                int val = pNode.val;
+                ListNode pToDel = pNode;
+                //把所有相同的节点都删干净了
+                while(pToDel!=null && pToDel.val==val){
+                    nextNode = pToDel.next;
+                    pToDel = nextNode;
+                }
+                preNode.next = nextNode;
+                pNode = nextNode;
+            }
+            //只剩下nextNode==null的这种情况
+            else{
+                preNode = pNode;
+                pNode = pNode.next;
+            }
+		}
+		
+		return dummy.next;
+    }
+```
+
 
 
 
