--- a/剑指offer 2/20 表示数值的字符串.md
+++ b/剑指offer 2/20 表示数值的字符串.md
@@ -8,3 +8,73 @@
 
 #### 解 题：
 
+根据`.`和`e|E`，把字符串分成三部分，分别判断就行。
+
+```java
+/**
+	 * 每个数都可以表示成下面的格式
+	 *   A[.[B]][e|EA]
+	 *  
+	 *  根据`.`和`e|E`，把字符串分成三部分
+	 * 
+	 * @param str
+	 * @return
+	 */
+	public boolean stringIsNum(char[] str) {
+		if(str==null || str.length==0) return false;
+		
+		int[] index = new int[] {0};
+		boolean isNumeric = false;
+		
+		//判断第一部分，小数点前面
+		isNumeric = isInteger(str, index);
+		
+		//判断第二部分，小数点后、e|E前面
+		if(index[0]<str.length && str[index[0]]=='.') {
+			index[0]++;
+			
+			//A.  .B   A.B 这三种情况都可以
+			isNumeric = isNumeric || isUnsignInteger(str, index);
+		}
+		
+		//判断第三部分，e|E之后的部分
+		if(index[0]<str.length && (str[index[0]]=='e' || str[index[0]]=='E')) {
+			isNumeric = isNumeric && isInteger(str, index);
+		}
+		
+		if(index[0]==str.length) {
+			return isNumeric;
+		}else {
+			return false;
+		}
+		
+	}
+	
+	
+	//可能有正负号的整数判定，对应A部分
+	private boolean isInteger(char[] str, int[] index) {
+		if(index[0]<str.length && (str[index[0]]=='+' || str[index[0]]=='-')) {
+			index[0]++;
+		}
+		return isUnsignInteger(str, index);
+	}
+	
+	//没有正负号的整数判定，对应B部分
+	private boolean isUnsignInteger(char[] str, int[] index) {
+		
+		int start = index[0];
+		
+		//注意：当while退出时，index[0]在整数的下一位
+		while(index[0]<str.length && (str[index[0]]-'0'<=9 && str[index[0]]-'0'>=0)) {
+			index[0]++;
+		}
+		
+		if(index[0]>start) {
+			return true;
+		}else {
+			return false;
+		}
+		
+	}
+```
+
