--- a/剑指offer 2/21 调整整数顺序使奇数位于偶数前面.md
+++ b/剑指offer 2/21 调整整数顺序使奇数位于偶数前面.md
@@ -6,3 +6,62 @@
 
 
 
+#### 解法（双指针）：
+
+1、最简单的办法就是扫描数组，找到偶数，放到数组最后，复杂度太高，pass。
+
+2、两次遍历，分别把奇书和偶数追加进list。
+
+3、**设立双指针，两边同时遇到奇数和偶数就交换。**
+
+
+
+```java
+public void reOrder(int[] nums) {
+		if(nums==null || nums.length==0) {
+			System.out.println("传入数组为空");
+		}
+		
+		int left = 0;
+		int right = nums.length - 1;
+		
+		while(left<right) {
+			
+			//找到左边不满足的数
+			while(left<right && isValid(nums, left)) {
+				left++;
+			}
+			
+			//右边不满足的数
+			while(left<right && !isValid(nums, right)) {
+				right--;
+			}
+			
+			//交换
+			if(left<right) {
+				int temp = nums[left];
+				nums[left] = nums[right];
+				nums[left] = temp;
+			}
+		}
+		
+		
+	}
+	
+	
+	
+	//满足需要重排序的条件(可以改成其他的)
+	public boolean isValid(int[] nums, int index) {
+		if(nums[index]%2==1) {
+			return true;
+		}else {
+			return false;
+		}
+	}
+```
+
+
+
+问：为什么要把`isValid()`函数单独抽出来？
+
+答：防止遇到其他情况，如把整数和负数分开、能被3整除的和不能被三整除的分开等。
