--- a/剑指offer 2/23 链表中环的入口结点.md
+++ b/剑指offer 2/23 链表中环的入口结点.md
@@ -4,3 +4,85 @@
 
 如果一个链表中包含环，如何找到环的入口结点？
 
+
+
+#### 解题（双指针法）：
+
+判断是否有环？
+
+- 一个指针每次走一步，另外一个指针每次走两步。如果有环，两个指针必然会发生重叠。
+
+找环的入口？
+
+- 先找到某个环内的节点
+- 找到环内节点的数量（环内指针循环计数，直到指针相等）
+-  找到环的入口（设环的节点数量为n，一个指针先走n步，另外一个指针才开始走，两个指针相等的地方就是入口）
+
+```java
+/**
+	 * 判断链表是否有环
+	 * 
+	 * 一个指针每次走一步，另外一个指针每次走两步。如果有环，两个指针必然会发生重叠。
+	 * 
+	 * @param head
+	 * @return
+	 */
+	public ListNode MeetingNode(ListNode head) {
+		
+		if(head==null) return null;
+		
+		ListNode pslow = head;
+		if(pslow.next == null) return null;
+		
+		ListNode pfast = pslow.next;
+		
+		while(pfast != null && pslow != null & pfast != pslow) {
+			if(pfast == pslow) return pfast;
+			pslow = pslow.next;
+			if(pfast.next == null) {
+				pfast = pfast.next.next;
+			}
+		}
+		
+		return null;
+	}
+	
+	/**
+	 * 找到环的入口
+	 * 
+	 * A: 先找到某个环内的节点
+	 * B: 找到环内节点的数量（环内指针循环计数，直到指针相等）
+	 * C: 找到环的入口（设环的节点数量为n，一个指针先走n步，另外一个指针才开始走，两个指针相等的地方就是入口）
+	 * 
+	 * @param head
+	 * @return
+	 */
+	public ListNode entryNodeOfLoop(ListNode head) {
+		
+		ListNode meetPoint = MeetingNode(head);
+		
+		//链表无环
+		if(meetPoint==null) return null;
+		
+		ListNode p = meetPoint;
+		int loopNum = 1;
+		while(meetPoint != p) {
+			p = p.next;
+			++loopNum;
+		}
+		
+		ListNode p1 = head;
+		ListNode p2 = head;
+		for(int i=0; i<loopNum; i++) {
+			p1 = p1.next;
+		}
+		
+		while(p1 != p2) {
+			p1 = p1.next;
+			p2 = p2.next;
+		}
+		
+		return p1;
+	}
+```
+
