--- a/剑指offer 2/24 翻转链表.md
+++ b/剑指offer 2/24 翻转链表.md
@@ -4,3 +4,39 @@
 
 定义一个函数，输入一个链表的头节点，翻转该链表，并输出链表的头节点。
 
+
+
+#### 解法（原地指向翻转）：
+
+创建三个节点：前一个节点，当前节点，后一个节点。
+
+**只需要把当前节点的next指向前一个节点就行。**
+
+
+
+```java
+public ListNode reverseListNode(ListNode head) {
+		
+		if(head==null) return null;
+		
+		//前一个节点
+		ListNode preNode = null;
+		
+		//后一个节点
+		ListNode nextNode = null;
+		
+		while(head != null) {
+			nextNode = head.next;
+			
+			//核心操作，前后翻转
+			head.next = preNode;
+			
+            //更新节点
+			preNode = head;
+			head = nextNode;
+		}
+		
+		return head;
+	}
+```
+
