--- a/剑指offer 2/26 树的子结构.md
+++ b/剑指offer 2/26 树的子结构.md
@@ -4,3 +4,31 @@
 
 输入两棵二叉树A和B，判断B是不是A的子结构。
 
+#### 解法（递归）：
+
+leetcode原题，见过好多次了。
+
+```java
+public ListNode mergeTwoLists3(ListNode a1, ListNode a2) {
+		if (a1 == null) {
+			return a2;
+		} else if (a2 == null) {
+			return a1;
+		}
+
+		ListNode mergerNode = null;
+
+		if (a1.val < a2.val) {
+			mergerNode = a1;
+			mergerNode.next = mergeTwoLists3(a1.next, a2);
+		} else {
+			mergerNode = a2;
+			mergerNode.next = mergeTwoLists3(a1, a2.next);
+		}
+
+		return mergerNode;
+	}
+```
+
+
+
