--- a/剑指offer 2/25 合并两个排序的链表.md
+++ b/剑指offer 2/25 合并两个排序的链表.md
@@ -3,3 +3,32 @@
 #### 题目：
 
 输入两个递增排序的链表，合并这两个链表并使新链表的节点依然是递增排序的。
+
+#### 解题：
+
+leetcode原题，见过好多次了。
+
+```java
+public ListNode mergeTwoLists3(ListNode a1, ListNode a2) {
+		if (a1 == null) {
+			return a2;
+		} else if (a2 == null) {
+			return a1;
+		}
+
+		ListNode mergerNode = null;
+
+		if (a1.val < a2.val) {
+			mergerNode = a1;
+			mergerNode.next = mergeTwoLists3(a1.next, a2);
+		} else {
+			mergerNode = a2;
+			mergerNode.next = mergeTwoLists3(a1, a2.next);
+		}
+
+		return mergerNode;
+	}
+```
+
+
+
