--- a/剑指offer 2/26 树的子结构.md
+++ b/剑指offer 2/26 树的子结构.md
@@ -6,29 +6,101 @@
 
 #### 解法（递归）：
 
-leetcode原题，见过好多次了。
+- 涉及树的问题，首先想能否用递归解决问题。
+- **浮点值在计算机中表示不太精确，比较大小时，不能用==，需要用差值来判断**
+- 递归先写核心逻辑，再写返回条件，不要忘了指针判空。
 
 ```java
-public ListNode mergeTwoLists3(ListNode a1, ListNode a2) {
-		if (a1 == null) {
-			return a2;
-		} else if (a2 == null) {
-			return a1;
-		}
+public class IsSubTree {
 
-		ListNode mergerNode = null;
-
-		if (a1.val < a2.val) {
-			mergerNode = a1;
-			mergerNode.next = mergeTwoLists3(a1.next, a2);
-		} else {
-			mergerNode = a2;
-			mergerNode.next = mergeTwoLists3(a1, a2.next);
-		}
-
-		return mergerNode;
+	class BinaryTree{
+		double value;
+		BinaryTree lefTree;
+		BinaryTree righTree;
 	}
+	
+	/**
+	 * 入口函数
+	 * 
+	 * @param aTree 包含B的树A
+	 * @param bTree 要判断的子树B
+	 * @return
+	 */
+	public boolean hasSubTree(BinaryTree aTree, BinaryTree bTree) {
+		boolean result = false;
+		
+		
+		if(aTree != null && bTree != null) {
+			
+			//如果A中某个节点和B的头节点相同，那么开始对应的遍历
+			if(equal(aTree.value, bTree.value)) {
+				result = doesAtreeHasBtree(aTree, bTree);
+			}
+			
+			
+			//为了不让result的值被覆盖，所以用if把两棵子树的遍历包裹起来
+			if(!result) {
+				result = hasSubTree(aTree.lefTree, bTree);
+			}
+			if(!result) {
+				result = hasSubTree(aTree.righTree, bTree);
+			}
+		}
+		
+		return result;
+	}
+	
+	
+	/**
+	 * A的子树是否包含B
+	 * 
+	 * @param aSubTree
+	 * @param bTree
+	 * @return
+	 */
+	public boolean doesAtreeHasBtree(BinaryTree aSubTree, BinaryTree bTree) {
+		
+		if (bTree==null) {
+			return true;
+		}
+		
+		if(aSubTree==null) {
+			return false;
+		}
+		
+		if(!equal(aSubTree.value, bTree.value)) {
+			return false;
+		}
+		
+		if(equal(aSubTree.value, bTree.value)) {
+			return doesAtreeHasBtree(aSubTree.lefTree, bTree.lefTree) 
+					&& doesAtreeHasBtree(aSubTree.righTree, bTree.righTree);
+		}else {
+			return false;
+		}
+	
+	}
+	
+	
+	
+	/**
+	 * 
+	 * 判断两个浮点型数据值是否相等
+	 * 
+	 * 由于计算机内表示浮点类型的值有误差，所以用差值小于某个范围表示相等
+	 * 
+	 * @param a
+	 * @param b
+	 * @return
+	 */
+	public boolean equal(double a, double b) {
+		if((a-b>-0.0000001) && (a-b<0.0000001)) {
+			return true;
+		}else {
+			return false;
+		}
+	}
+	
+}
 ```
-
-
 
