--- a/剑指offer 2/27 二叉树的镜像.md
+++ b/剑指offer 2/27 二叉树的镜像.md
@@ -3,3 +3,48 @@
 #### 题目：
 
 完成一个函数，输入一棵二叉树，该函数输出它的镜像。
+
+#### 解题：
+
+如何写递归？
+
+- 先写核心逻辑
+- 再写返回条件
+
+这道题需要注意判断节点是否为空。
+
+```java
+/**
+	 *  递归翻转二叉树
+	 *  
+	 * @param head
+	 * @return
+	 */
+	public BinaryTree mirrorBinaryTree(BinaryTree head) {
+		
+		if(head == null) {
+			return null;
+		}
+		
+        //只有两个节点都为null，才停止
+		if(head.leftTree == null || head.righTree == null) {
+			return null;
+		}
+		
+		BinaryTree tempNode = null;
+		tempNode = head.leftTree;
+		head.leftTree = head.righTree;
+		head.righTree = tempNode;
+		
+		if(head.leftTree != null) {
+			mirrorBinaryTree(head.leftTree);
+		}
+		
+		if(head.righTree != null) {
+			mirrorBinaryTree(head.righTree);
+		}
+		
+		return head;
+	}
+```
+
