--- a/剑指offer 2/28 对称的二叉树.md
+++ b/剑指offer 2/28 对称的二叉树.md
@@ -2,4 +2,56 @@
 
 #### 题目：
 
-请事先一个函数，判断一棵二叉树是不是对称的。如果一棵二叉树和它的镜像一样，那么它是对称的。
+请事先一个函数，判断一棵二叉树是不是对称的。如果一棵二叉树和它的镜像一样，那么它是对称的。 
+
+#### 解题：
+
+这道题不看解法真的很难想到，实际上可以使用树的遍历解决问题。
+
+树的遍历有三种，前序遍历、中序遍历、后序遍历。**所谓的前中后，指的是根节点在遍历时的顺序。**
+
+
+
+采用两种不同的前序遍历方法可以解决这道题：
+
+- 根节点、左节点、右节点（原来的前序遍历）
+- 根节点、右节点、左节点（新作的前序遍历方法）
+- 因为上面的方法，有时候非对称的树也遍历结果一样，所以在遍历的时候，如果遇到null，也进行比较，来解决这个漏洞。
+
+```java
+public boolean isSymmetrical(BinaryTree head) {
+		return isSymmetrical(head, head);
+	}
+	
+	/**
+	 * 比较两棵树，用不同方法的前序遍历节点时，依次比较对应节点的值是否相同
+	 * 
+	 * @param root1
+	 * @param root2
+	 * @return
+	 */
+	public boolean isSymmetrical(BinaryTree root1, BinaryTree root2) {
+		
+		//两个节点都为null，说明同时遍历结束，符合条件
+		if(root1==null && root2==null) {
+			return true;
+		}
+		
+		//有一个遍历结束了，另外一个没结束，说明对应节点不相同
+		if(root1==null || root2==null) {
+			return false;
+		}
+		
+		//值不一样
+		if(root1.value != root2.value) {
+			return false;
+		}
+		
+		//核心逻辑
+		return isSymmetrical(root1.leftTree, root2.righTree) 
+				&& isSymmetrical(root1.righTree, root2.leftTree);
+	}
+```
+
+
+
