--- a/剑指offer 2/29 顺时针打印矩阵.md
+++ b/剑指offer 2/29 顺时针打印矩阵.md
@@ -13,3 +13,77 @@
 1,2,3,4,8,12,16,15,14,13,,9,5,6,7,11,10
 ```
 
+#### 解题：
+
+一圈一圈的打印，每一圈的开头总在对角线上。
+
+当每一圈的开始位置靠近中间时，打印结束。
+
+
+
+把每打印一圈做成一个函数，那么会遇到上左下右的四种情况。
+
+```java
+public void printMatrixClockWise(int[][] matrix) {
+		int row = matrix.length;
+		int col = matrix[0].length;
+		
+		if(matrix==null || row<=0 || col<=0) {
+			System.out.println("input data error");
+		}
+		
+		//start作为开始的行和列的坐标
+		int start = 0;
+		
+		//每转一圈，打印一次
+		while(row>start*2 && col>row*2) {
+			printMatrixInCircle(matrix, row, col, start);
+			start++;
+		}
+		
+	}
+	
+	
+	/**
+	 * 打印一圈的方法
+	 * 
+	  * 需要依次打印上、右、下、左四个位置，打印时判断，不存在的不打印
+	 *  
+	 * @param matrix
+	 * @param row
+	 * @param col
+	 * @param start 起始位置
+	 */
+	public void printMatrixInCircle(int[][] matrix, int row, int col, int start) {
+		
+		int end_col = col - 1 - start;
+		int end_row = row - 1 - start;
+		
+		//从左到右打印一行，上边位置（无限制条件）
+		for(int i=start; i<=end_col; i++) {
+			System.out.print(matrix[start][i] + " ");
+		}
+		
+		//从上到下打印一行，右边位置（最起码要有两行吧）
+		if(start<end_row) {
+			for(int i = start+1; i<end_row; i++) {
+				System.out.print(matrix[i][end_col] + " ");
+			}			
+		}
+		
+		//从右往左打印一行，下边位置（最起码要有两行两列）
+		if(end_row>start && end_col>start) {
+			for(int i=end_col-1; i>=start; i--) {
+				System.out.print(matrix[end_row][i] + " ");
+			}
+		}
+		
+		//从下往上打印一行，左边位置（最起码三行两列）
+		if(end_row-1>start && end_col>start) {
+			for(int i=end_row-1; i>start; i--) {
+				System.out.println(matrix[i][end_col]);
+			}
+		}
+	}
+```
+
