--- a/剑指offer 2/31 栈的压入、弹出序列.md
+++ b/剑指offer 2/31 栈的压入、弹出序列.md
@@ -3,3 +3,54 @@
 #### 题目：
 
 输入两个整数序列，每一个序列表示栈的压入顺序，请判断第二个序列是否为该栈的弹出顺序。假设压入栈的所有数字均不相等。
+
+#### 解题：
+
+给出了两个序列，一个是压入序列，另外一个是弹出序列。要求压入序列弹出的时候，按照弹出序列弹出，如果不行就返回false。
+
+
+
+- 压入序列pPush，弹出序列pPop。
+- 把pPush逐个放进栈中
+- 如果遇到栈顶元素与弹出序列的当前元素相同，那么弹出
+- 如果不相同，继续往栈压数据
+
+
+
+```java
+/**
+	 * 逐个压入栈，如果遇到栈顶元素等于要弹出的元素，弹出，否则压入
+	 * 
+	 * @param pPush 压入栈的序列
+	 * @param pPop 希望弹出栈的序列
+	 * @return
+	 */
+	public boolean isPopOrder(int[] pPush, int[] pPop) {
+		
+		if(pPush==null || pPop==null) {
+			return  false;
+		}
+		
+		if(pPush.length != pPop.length || pPush.length==0) {
+			return false;
+		}
+		
+		Stack<Integer> stack = new Stack<Integer>();
+		
+		//弹出指针
+		int popIndex = 0;
+		
+		//pushIndex为压入栈的指针
+		for(int pushIndex=0; pushIndex<pPush.length; pushIndex++) {
+			stack.push(pPush[pushIndex]);
+			while(!stack.empty() && stack.peek()==pPop[popIndex]) {
+				stack.pop();
+				popIndex++;
+			}
+		}
+		
+		return stack.empty();
+		
+	} 
+```
+
