--- a/剑指offer 2/32 从上到下打印二叉树(扩展题还没做).md
+++ b/剑指offer 2/32 从上到下打印二叉树(扩展题还没做).md
@@ -34,7 +34,178 @@ public void printTree(TreeNode root) {
 
 
 
+
+
 #### 扩展1：分行从上到下打印二叉树
 
 从上到下按层打印二叉树，同一的层节点按从左到右的顺序打印，**每一层打印到一行**。
+
+
+
+想要分行打印，那么必须记录当前行到底有几个节点，下一行有几个节点。
+
+
+
+`while`循环里面的`for`利用`int size=queue.szie()`冻结了当前层的节点数，直到当前行全部打印结束。**这是目前发现for循环的新用法，非常完美！**
+
+**复杂度：本来双重循环的时间复杂度是O(n^2)，但这里while套for仅仅是O(n)。**
+
+```java
+/**
+	 * 
+	  * 分行从上到下打印二叉树
+	 * 
+	 * @param root
+	 */
+	public void printlnTree(TreeNode root) {
+		
+		if(root==null) {
+			System.out.println("根节点为null，请重新输入！");
+		}
+		
+		Queue<TreeNode> queue = new LinkedList<TreeNode>();
+		queue.offer(root);
+		
+		TreeNode temp = null;
+		while(!queue.isEmpty()) {
+			for(int size=queue.size(); size>0; size--) {
+				
+				temp = queue.poll();
+				System.out.println(temp.value);
+				System.out.println("\t");
+				
+				if(temp.leftNode != null) {
+					queue.offer(temp.leftNode);
+				}
+				if(temp.rightNode != null) {
+					queue.offer(temp.rightNode);
+				}
+				
+			}
+			
+			System.out.println("\n");
+		}
+		
+		
+	}
+```
+
+
+
+除了用for这种办法记录每层的节点数之外，还以用`currLevel`和`nextLevel`来记录当前层和下一层的节点数。这也是一种解决办法。
+
+```java
+			System.out.println(temp.value);
+			--currLevel;
+			if(currLevel==0) {
+				System.out.println("\n");
+				currLevel = nextLevel;
+				nextLevel = 0;
+			}
+```
+
+
+
+
+
+#### 扩展2 之字形打印二叉树
+
+请实现一个函数，按照之字形打印二叉树，即第一行按照从左到右的顺序打印，第二行按照从右到左的顺序打印，第三行再按照从左到右的顺序，以后的以此类推。
+
+
+
+- 奇数行从左到右，偶数行从右到左
+- 当访问奇数行时，创建stack1，从左到右遍历二叉树
+- 当访问偶数行时，创建stack2，从右往左遍历二叉树
+- 创建layer来决定什么时候调用stack1和stack2
+
+
+
+```java
+public ArrayList<ArrayList<Integer>> Print(TreeNode root) {
+		
+		ArrayList<ArrayList<Integer>> result = new ArrayList<ArrayList<Integer>>();
+		
+		//用来记录行数
+		int layer = 1;
+		
+		//放奇数行的节点
+		Stack<TreeNode> stack1 = new Stack<TreeNode>();
+		stack1.push(root);
+		
+		//放偶数行的节点
+		Stack<TreeNode> stack2 = new Stack<TreeNode>();
+		
+		TreeNode temp = null;
+		//当奇数行的栈和偶数行的栈全都为空的时候，表示所有的节点都已经打印完了
+		while(!stack1.empty() || !stack2.empty()) {
+			
+			//奇数行
+			if(layer % 2 == 1) {
+				
+				//存放当前层的数字
+				ArrayList<Integer> line1 = new ArrayList<Integer>(); 
+				
+				while(!stack1.empty()) {
+					temp = stack1.pop();
+					//System.out.print(temp.value);
+                    if(temp != null){
+                        line1.add(temp.val);
+					    //System.out.print("\t");
+					
+					    //先访问左节点，再访问右节点
+					    if(temp.left != null) {
+						    stack2.push(temp.left);
+                        }
+                        if(temp.right != null) {
+                            stack2.push(temp.right);
+                        }
+                    }
+					
+				}
+				
+				if(stack1.size() == 0) {
+					layer++;
+					if(line1.size()>0) result.add(line1);
+					//System.out.println();
+				}
+				
+			}
+			//偶数行
+			else {
+				
+				//存放当前层的数字
+				ArrayList<Integer> line2 = new ArrayList<Integer>();
+				
+				while(!stack2.empty()) {
+					temp = stack2.pop();
+					//System.out.print(temp.value);
+                    if(temp != null){
+                        line2.add(temp.val);
+                        //System.out.print("\t");
+                        
+                        //先访问右节点，再访问左节点
+                        if(temp.right != null) {
+                            stack1.push(temp.right);
+                        }
+                        if(temp.left != null) {
+                            stack1.push(temp.left);
+                        }
+                    }
+				}
+				
+				if(stack2.size() == 0) {
+					layer++;
+					if(line2.size()>0) result.add(line2);
+					//System.out.println();
+				}
+				
+			}
+			
+			
+		}
+		
+		return result;
+	}
+```
 
