--- a/剑指offer 2/33 二叉搜索树的后序遍历序列.md
+++ b/剑指offer 2/33 二叉搜索树的后序遍历序列.md
@@ -5,3 +5,65 @@
 输入一个整数数组，判断该数组是不是某二叉搜索树的后续遍历结果。
 
 假设输入的数字中，任意两个数字都互不相等。
+
+
+
+#### 解题：
+
+- 后续遍历是指 **左节点--->右节点--->根节点** 这样的顺序遍历二叉树。
+
+- 二叉树相关的算法一般考虑用递归
+- 后序遍历，最后一个节点时根节点，根节点的值大于左子树的每一个值，小于右子树的每一个值。根据这个依据，可以区分出左右子树。
+
+
+
+```java
+public boolean VerifySquenceOfBST(int [] sequence) {
+        if(sequence==null || sequence.length==0){
+            return false;
+        }
+        return VerifySquenceOfBST1(sequence, 0, sequence.length-1);
+    }
+    
+    public boolean VerifySquenceOfBST1(int[] sequence, int start, int end){
+        
+        //只剩下一个节点了
+        if(start>=end){
+            return true;
+        }
+        
+        //根节点为中序遍历的最后一个节点
+        int root = sequence[end];
+        
+        //找到左子树(root的值应该大于所有的左子树的值)
+        int i = start;
+        for(; i<end; i++){
+            if(sequence[i]>root){
+              break;
+            }
+        }
+        
+        //判断右子树（root的值应该小于所有右子树的值）
+        int j = i;
+        for(; j<end; j++){
+            if(root>sequence[j]){
+                return false;
+            }
+        }
+        
+        //递归判断左子树
+        boolean left = true;
+        if(i>0){
+            left = VerifySquenceOfBST1(sequence, start, i-1);
+        }
+        
+        //递归判断右子树
+        boolean right = true;
+        if(j<end){
+            right = VerifySquenceOfBST1(sequence, i, end);
+        }
+        
+        return left&&right;
+    }
+```
+
