--- a/剑指offer 2/34 二叉树中和为某一值的路径.md
+++ b/剑指offer 2/34 二叉树中和为某一值的路径.md
@@ -5,3 +5,40 @@
 输入一棵二叉树和一个整数，打印出二叉树中节点值的和为输入整数的所有路径。丛书的根节点开始往下一直到叶节点所经过的节点形成一条路径。二叉树节点的定义如下：
 
 #### 解题：
+
+- 树一般考虑用递归
+- 前序遍历
+- `list.remove(list.size()-1);`  每次分支退出，都会执行这段代码，一层一层的移除，只剩下根节点。
+
+```java
+	ArrayList<ArrayList<Integer>> result = new ArrayList<ArrayList<Integer>>();
+    ArrayList<Integer> list = new ArrayList<Integer>();
+    
+    public ArrayList<ArrayList<Integer>> FindPath(TreeNode root,int target) {
+        
+        //如果空节点就直接返回
+        if(root==null) return result;
+        
+        //记录节点
+        list.add(root.val);
+        
+        //计算剩余路径
+        target -= root.val;
+        
+        //剩余路径为0，说明路径和等于target，再加上叶子节点的条件，这条路径符合条件
+        if(target==0 && root.left==null && root.right==null){
+            result.add(list);
+        }
+        
+        //向左右节点展开
+        FindPath(root.left, target);
+        FindPath(root.right, target);
+        
+        //左右路径每返回一次，记录就减去1
+        list.remove(list.size()-1);
+        
+        //返回最后的结果
+        return result;
+    }
+```
+
