--- a/剑指offer 2/37 序列化二叉树.md
+++ b/剑指offer 2/37 序列化二叉树.md
@@ -3,3 +3,44 @@
 #### 题目：
 
 请实现两个函数，分别用来序列化和反序列化二叉树。
+
+#### 解题：
+
+- 树首先考虑用递归，递归就逃不掉三种遍历方式
+- 序列化采用前序遍历，为了先进来的节点先序列化，而不是等所有节点都进来了，再序列化
+- 用特殊符号代替null，如`#`，用`,`分隔每个节点
+
+```java
+	//序列化
+	StringBuffer sb = new StringBuffer();
+    String Serialize(TreeNode root) {
+        if(root==null) {
+            sb.append("#,");
+        }
+        sb.append(root.val + ",");
+        sb.append(Serialize(root.left));
+        sb.append(Serialize(root.right));
+        return sb.toString();
+    }
+    
+
+
+
+	//反序列化
+    int index = -1;
+    TreeNode Deserialize(String str) {
+        index++;
+        
+        String[] strs = str.split(",");
+        
+        TreeNode node = null;
+        if(!strs[index].equals("#")){
+            node.val = Integer.valueOf(strs[index]);
+            node.left = Deserialize(str);
+            node.right = Deserialize(str);
+        }
+        
+        return node;
+    }
+```
+
