--- a/剑指offer 2/35 复杂链表的复制.md
+++ b/剑指offer 2/35 复杂链表的复制.md
@@ -5,3 +5,98 @@
 请实现函数，复制一个复杂链表。在复杂链表中，每个节点除了有一个m_pnext指向指针下一个节点，
 
 还有一个m_pSibling指针指向链表中的任意节点或者nullptr。
+
+#### 解题：
+
+这种方法别出心裁，很巧妙，真是把链表玩出花来。
+
+
+
+- 在原节点后面创建无RandomListNode的相同节点
+- 设置相同节点的RandomListNode
+- 原链表和新建链表的分离
+
+```java
+/*
+public class RandomListNode {
+    int value;
+    RandomListNode next = null;
+    RandomListNode random = null;
+
+    RandomListNode(){}
+    
+    RandomListNode(int value) {
+        this.value = value;
+    }
+}
+*/
+public class Solution {
+    public RandomListNode Clone(RandomListNode pHead)
+    {
+        //1 在原节点后面创建无RandomListNode的相同节点
+        cloneNodes(pHead);
+        
+        //2 设置相同节点的RandomListNode
+        connectSiblingNodes(pHead);
+        
+        //3 原链表和新建链表的分离
+        return reconnectedNodes(pHead);
+    }
+    
+    //第一步
+    public void cloneNodes(RandomListNode pHead){
+        RandomListNode p = pHead;
+        while(p != null){
+            
+            //复制了一个节点
+            RandomListNode node = new RandomListNode();
+            node.value = p.value;
+            node.next = p.next;
+            
+            //设置随机指向的节点为null
+            node.random = null;
+            
+            //把当前节点和新节点连起来
+            p.next = node;
+            
+            //更新当前节点，为了下一轮的循环
+            p = node.next;
+        }
+    }
+    
+    //第二步
+    public void connectSiblingNodes(RandomListNode pHead){
+        RandomListNode p = pHead;
+        while(p != null){
+            RandomListNode node = p.next;
+            if(p.random != null){
+                node.random = p.random.next;
+            }
+            p = node.next;
+        }
+    }
+    
+    //第三步
+    public RandomListNode reconnectedNodes(RandomListNode pHead){
+        RandomListNode p = pHead;
+        RandomListNode nHead = pHead;
+        RandomListNode node = pHead;
+        
+        if(p != null){
+            nHead = node = p.next;
+            p.next = node.next;
+            p = p.next;
+        }
+        
+        while(p != null){
+            node.next = p.next;
+            node = node.next;
+            
+            p.next = node.next;
+            p = p.next;
+        }
+        return nHead;
+    }
+}
+```
+
