--- a/剑指offer 2/39 数组中出现次数超过一半的数字.md
+++ b/剑指offer 2/39 数组中出现次数超过一半的数字.md
@@ -73,3 +73,49 @@ public static int MoreThanHalfNum_Solution(int [] array) {
     }
 ```
 
+
+
+#### 解法二：
+
+- 如果一个数出现的次数大于数组的一半，那么这个数的总次数减去其他所有数出现的次数，也肯定是大于0的。
+- 设置`result`存放数，`time`存放次数。`time`等于0，则把值赋给result，令time等1；
+- 不等则减 
+- 相等则加
+- 遍历到最后，time不为0的那个数就是答案。
+- 最后校验一下。
+
+```java
+	//第二种解法
+    public int MoreThanHalfNum_Solution2(int[] nums){
+    	
+    	if(nums==null || nums.length==0) return 0;
+    	
+    	int result = nums[0];
+    	int time = 1;
+    	for(int i=0; i<nums.length; i++) {
+    		if(time==0) {
+    			result = nums[i];
+    			time = 1;
+    		}else if(result==nums[i]) {
+    			time++;
+    		}else {
+				time--;
+			}
+    	}
+    	
+        
+    	//检查这个数是不是真的是超过一半了(有些数组本来就没有超过一半的数)
+        for(int i=0; i<nums.length; i++){
+            if(nums[i] == result){
+                time += 1;
+            }
+        }
+        
+        if(time > nums.length){
+            return result;
+        }else{
+            return -1;
+        }
+    }
+```
+
