--- a/剑指offer 2/40 最小的k个数.md
+++ b/剑指offer 2/40 最小的k个数.md
@@ -75,5 +75,47 @@
 
 
 
-  
+  #### 解法二（大顶堆）：
+
+大顶堆，最上面的那个元素是最大的。
+
+用优先队列`QriorityQueue`实现一个`K`个元素的大顶堆。
+
+```
+public ArrayList<Integer> GetLeastNumbers_Solution(int[] input, int k) {
+		
+		ArrayList<Integer> result = new ArrayList<Integer>();
+		
+		int length = input.length;
+		if (k > length || k == 0) {
+			return result;
+		}
+		
+		//大顶堆
+		PriorityQueue<Integer> maxHeap = new PriorityQueue<Integer>(k, new Comparator<Integer>() {
+			@Override
+			public int compare(Integer o1, Integer o2) {
+				return o2.compareTo(o1);
+			}
+		});
+		
+		for (int i = 0; i < length; i++) {
+			if (maxHeap.size() != k) {  //堆元素不满k个，就添加
+				maxHeap.offer(input[i]);
+			} else if (maxHeap.peek() > input[i]) {  //小于最大的元素就替换
+				Integer temp = maxHeap.poll();
+				temp = null;
+				maxHeap.offer(input[i]);
+			}
+		}
+		
+		for (Integer integer : maxHeap) {
+			result.add(integer);
+		}
+		
+		return result;
+	}
+```
+
+**复杂度**：`nlog(k)`
 
