--- a/剑指offer 2/42 连续子数组的最大和.md
+++ b/剑指offer 2/42 连续子数组的最大和.md
@@ -3,3 +3,32 @@
 #### 题目：
 
 输入一个连续数组，数组里有正数也有负数。数组中一个或者多个整数组成子数组。求出所有子数组中和的最大值。要求时间复杂度为O(n) 。
+
+#### 解题（动态规划）：
+
+`result` 用来记录阶段性最大值。
+
+```java
+	public int FindGreatestSumOfSubArray(int[] nums) {
+        
+        if(nums == null && nums.length<=0) return 0;
+		
+		int[] dp = new int[nums.length];
+		dp[0] = nums[0];
+		
+		int result = 0;
+		for(int i=1; i<dp.length; i++) {
+			
+			if(dp[i-1]>0) {
+				dp[i] = dp[i-1] + nums[i];
+			}else {
+				dp[i] = nums[i];
+			}
+			
+			result = Math.max(dp[i], result);
+		}
+		
+		return result;
+    }
+```
+
