--- a/剑指offer 2/43 1-n整数中1出现的次数.md
+++ b/剑指offer 2/43 1-n整数中1出现的次数.md
@@ -3,3 +3,40 @@
 #### 题目：
 
 输入一个整数n，求出1-n这n个整数的十进制表示中1出现的次数。
+
+#### 解题：
+
+这个题不太好做，一般想不到恰当的方法。
+
+- 个位数上面的1，按照10划一个阶梯，即每10个数，出现一次1
+
+- 十位数上面的1，按照100划分一个阶梯，即每100个数，出现10次
+
+- 。。。。。。
+
+- 如果不满一个阶梯，需要计算这个阶梯内满足条件的1。
+
+- `(num / diviver) * i + Math.min(Math.max(num % diviver - i+1, 0), i)`
+
+  最小值的i表示一个阶梯内，最大拥有i个1。
+
+  最大值的表示不满一个阶梯，年减年加一。
+
+```java
+	public static int getCountOneNum(int num) {
+		
+		if(num == 0) return 0;
+		
+		int count = 0;
+		
+		for(int i=1; i<=num; i*=10) {
+			long diviver = i * 10;
+			
+			//+号前面前面是分阶梯，加号后面是不满一个阶梯怎么算
+			count += (num / diviver) * i + Math.min(Math.max(num % diviver - i+1, 0), i);
+		}
+		
+		return count;
+	}
+```
+
