--- a/剑指offer 2/44 数字序列中某一位的数字.md
+++ b/剑指offer 2/44 数字序列中某一位的数字.md
@@ -4,3 +4,75 @@
 
 数字以1234567891011121314。。。。的格式序列化到一个字符串序列中。在这个序列中，第5位是5，第十三位是1，第19位是4。请实现一个函数，求任意第n位对应的数字。
 
+
+
+#### 解题：
+
+穷举法：
+
+- 0-9，占10个字符
+- 10-99，占90个字符
+- 100-999，占900个字符
+- 。。。。
+
+```java
+	//1 函数入口
+	public static int getAtIndex(int index){
+		
+		//位数
+		int m = 1;
+		
+		while(true) {
+			
+			//m位的数总共有多少个
+			int numbers = countOfInteger(m);
+			
+			//当前的字符数小于m位数所占的所有的字符时
+			if(index < m*numbers) {				
+				return digitAtindex(index, m);
+			}
+			
+			//把m位的所有数都排除
+			index -= numbers * m;
+			
+			m++;
+		}
+		
+	}
+	
+
+	//2 m位数总共有几个数(如，1位数，0-9有10位。2位数，10-99，有90个)
+	public static int countOfInteger(int m) {
+		if(m == 1) {
+			return 10;
+		}else {			
+			return 9 * (int)Math.pow(10, m-1);
+		}
+	}
+	
+	
+	//3 当数字为m位时，求当前位数最靠近的index所在的数字
+	private static int digitAtindex(int index, int m) {
+		int currentNumber = getBeginNumber(m) + index / m;
+		int yushu = index % m;
+		
+		//把余数所在的位变成个位
+		for(int i=1; i<(m-yushu); i++) {
+			currentNumber /= 10;
+		}
+		
+		//把余数所在的位抽出来
+		return currentNumber % 10;
+	}
+
+	
+	//当数字为m位时，开始的第一个数字（开始的第三位为100）
+	public static int getBeginNumber(int m) {
+		if(m == 1) {
+			return 0;
+		}
+		
+		return (int) Math.pow(10, m-1);
+	}
+```
+
