--- a/剑指offer 2/45 把数组排成最小的数.md
+++ b/剑指offer 2/45 把数组排成最小的数.md
@@ -3,3 +3,53 @@
 #### 题目：
 
 输入一个正整数数组，把数组里面的所有数字拼接起来排成一个数，打印能拼接出的所有数字中最小的一个。
+
+
+
+#### 解题：
+
+- 如果直接拼接数组，容易超出int、long的界限，所以用字符串代替
+- 字符串比较，变成了字符顺序
+- 使用`Compartor`来比较。
+
+```
+------默认时从小到大排序，也就是返回-1 ------
+
+if(o1<o2) return -1;  //不交换顺序
+if(o1==o2) return 0;  //与返回1的结果一样，都是交换顺序
+if(o1>o2) return 1;   //交换顺序
+```
+
+
+
+```java
+	public String myPrintMinNum(int[] nums) {
+		
+		if(nums == null || nums.length <= 0) {
+			return null;
+		}
+		
+		int n = nums.length;
+		ArrayList<Integer> list = new ArrayList<Integer>();
+		for(int i=0; i<nums.length; i++) {
+			list.add(nums[i]);
+		}
+		
+		Collections.sort(list, new Comparator<Integer>() {
+			@Override
+			public int compare(Integer o1, Integer o2) {
+				String str1 = o1 + "" + o2;
+				String str2 = o2 + "" + o1;
+				return str1.compareTo(str2);
+			}
+		});
+		
+		String result = "";
+		for (Integer v : list) {
+			result += v;
+		}
+		
+		return result;
+	}
+```
+
