--- a/剑指offer 2/46 把数字翻译成字符串.md
+++ b/剑指offer 2/46 把数字翻译成字符串.md
@@ -4,3 +4,44 @@
 
 给定一个数字，按照如下规则翻译成字符串：0翻译成`a`, 1翻译成`b`, ,,,11翻译成`l`，25翻译成`z`。一个数字可能有多个翻译。例如，12258有5中不同的翻译，`bccfi,bwfi,bczi,mcfi,mzi`。请实现一个函数，计算一个数字有多少种不同的翻译方法。
 
+#### 解题一（动态规划）：
+
+- 每个数字面临两种情况:
+  - A:当前数字能行，当前数字和前一个数字组合也能行
+  - B:当前数字能行，当前数字和前一个数字组合不行
+- 这是一个求子问题的问题，用动态规划
+- 状态转移方程：`dp[i] = dp[i-1] + dp[i-2];` 和`dp[i] = dp[i-1];`
+
+
+
+```java
+	public int getTransCount(int num) {
+		
+		if(num<0) return 0;
+		
+		String temp = Integer.toString(num);
+		int len = temp.length();
+		
+		int[] dp = new int[len+1];
+		dp[0] = 1; //当26时开头时，dp[2] = dp[1] + dp[0]，只用这一下
+		dp[1] = 1;
+		
+		//A:当前数字能行，当前数字和前一个数字组合也能行 dp[i] = dp[i-1] + dp[i-2]
+		//B:当前数字能行，当前数字和前一个数字组合不行 dp[i] = dp[i-1]
+		for(int i=2; i<dp.length; i++) {
+			
+			int twoNum = Integer.valueOf(temp.substring(i-2, i));
+			
+			if(twoNum > 25) {	
+				dp[i] = dp[i-1];
+			}else {
+				dp[i] = dp[i-1] + dp[i-2];
+			}	
+		}
+		
+		return dp[len];
+	}
+```
+
+
+
