--- a/剑指offer 2/46 把数字翻译成字符串.md
+++ b/剑指offer 2/46 把数字翻译成字符串.md
@@ -45,3 +45,51 @@
 
 
 
+#### 解法二（自下而上的递归备忘录）：
+
+- 递归算法就是把一个大问题分解成若干的小问题
+- 递归算法的缺点在于存在许多重复计算的子问题
+- 可以从小问题推算到整个问题，自下而上的逐步计算
+- 这其实就是动态规划的另一个版本。
+
+```java
+	//自下而上的备忘录
+	public int getTransCount2(int num) {
+		
+		if(num<0) return 0;
+		
+		String temp = Integer.toString(num);
+		int len = temp.length();
+		
+		int[] dp = new int[len];
+		
+		int count;
+		//从最后一个字母开始算起
+		for(int i=len-1; i>=0; i--) {
+			
+			//只以当前数字转换成一个字母
+			if(i == len-1) {
+				count = 1;   //相当于count=dp[len-1]=1
+			}else {
+				count = dp[i+1];
+			}
+			
+			//当前数字和后一个数字
+			if(i < len-1) {
+				int twoNum = Integer.valueOf(temp.substring(i));
+				if(twoNum<26 && twoNum >= 0) {
+					if(i < len-2) {
+						count += dp[i+2];
+					}else {
+						count += 1;
+					}
+				}
+			}
+			
+			dp[i] = count;
+		}
+		
+		return dp[0];
+	}
+```
+
