--- a/剑指offer 2/47 礼物的最大值.md
+++ b/剑指offer 2/47 礼物的最大值.md
@@ -3,3 +3,40 @@
 #### 题目：
 
 在一个m*n的棋盘的每一个都放有一个礼物，每个礼物都有一定的价值（价值大于0）.你可以从棋盘的左上角开始那一个礼物，并每次向左或向下移动一格，直到达到棋盘的右下角，给定一个棋盘及其上面的礼物，请你计算最多能够拿到多少价格的礼物？
+
+#### 解题：
+
+非常典型的动态规划，就不写解释了。
+
+```java
+	public int getGiftMaxValue(int[][] matrix) {
+		
+		if(matrix == null || matrix.length==0 || matrix[0].length==0) {
+			return 0;
+		}
+		
+		int row = matrix.length;
+		int col = matrix[0].length;
+		
+		int[][] dp = new int[row][col];
+		dp[0][0] = matrix[0][0];
+		
+		//初始化第一行
+		for(int i=1; i<row; i++) {
+			dp[i][0] = dp[i-1][0] + matrix[i][0];
+		}
+		//初始化第一列
+		for (int i=1; i < col; i++) {
+			dp[0][i] = dp[0][i-1] + matrix[0][i];
+		}
+		
+		for(int i=1; i<row; i++) {
+			for(int j=1; j<col; j++) {
+				dp[i][j] = Math.max(dp[i-1][j], dp[i][j-1]) + matrix[i][j];
+			}
+		}
+		
+		return dp[row-1][col-1];
+	}
+```
+
