--- a/剑指offer 2/48 最长不含重复字符的子字符串.md
+++ b/剑指offer 2/48 最长不含重复字符的子字符串.md
@@ -3,3 +3,57 @@
 #### 题目:
 
 请从字符串中找到一个不包含重复字符的子字符串，计算该子字符串的长度，假设字符串中只包含`a-z`。
+
+#### 解题（动态规划）：
+
+动态规划，关于相同子问题和最优化结构的问题。最重要的是写出**状态转移方程**：
+
+- `dp[i]`记录以`i`结尾的最长子字符串的长度
+- 如果第`i`个字符在前面的子字符串中重复，那么`dp[i] = dp[i-1] + 1;`
+- 如果不重复，`dp[i] = i - 重复的位置;`，把重复的地方扔掉。
+- 仔细观察动态数组的使用情况，就会发现只用到了当前值和前一个值，所以，动态数组可以优化为两个值：用`pre和cur`代替`dp`数组。
+
+```java
+	public int findLongestSubstringLength2(String str) {
+		
+		//1 判空
+		if(str==null || "".equals(str)) return 0;
+		
+		//2 创建动态数组
+		int pre = 0;   //f(i-1)
+		int cur = 0;   //f(i)
+		
+		//3 创建要返回的结果
+		int result = 0;
+		
+		//4 记录字母上次出现的位置
+		int[] position = new int[26];
+		for(int i=0; i<26; i++) {
+			position[i] = -1;
+		}
+		
+		//5 循环，既然不能用dp，那就只能用字符串了
+		for(int i=0; i<str.length(); i++) {
+			
+			int letterIndex = str.charAt(i) - 'a';
+			
+			//状态方程
+			if(position[letterIndex] == -1 || i - position[letterIndex] > cur) {
+				cur = pre + 1;
+			}else {
+				cur = i - position[letterIndex];
+			}
+			
+			//动态数组取极值
+			result = Math.max(result, cur);
+			
+			//更新值(为下一次循环做准备)
+			position[letterIndex] = i;
+			pre = cur;
+			
+		}
+		
+		return result;
+	}
+```
+
