--- a/剑指offer 2/49 丑数.md
+++ b/剑指offer 2/49 丑数.md
@@ -3,3 +3,48 @@
 #### 题目：
 
 我们把只包含因子2、3、5的数称作丑数（Ugly NUmber）。求从小到大顺序的第1500个丑数。
+
+#### 解题：
+
+- 对排序的丑数，分别乘以2，3，5，变成3个数组
+- 对这三个数组中找到刚好大于当前丑数的值，得到M2, M3,M5
+- 把这三个值的最小值放进下一个丑数。
+
+
+
+```java
+	public int getUglyNum(int index) {
+		
+		//1 判空
+		if(index <= 0) return 0;
+		
+		//2 创建结果数组
+		int[] reslut = new int[index];
+		reslut[0] = 1;
+		
+		//3 创建初始的下标
+		int index2 = 0;
+		int index3 = 0;
+		int index5 = 0;
+		
+		for(int i=1; i<index; i++) {
+			
+			//得到最小值
+			reslut[i] = Math.min(Math.min(reslut[index2]*2,reslut[index3]*3), reslut[index5]);
+			
+			while(reslut[index2]*2 <= reslut[i]) {
+				index2++;
+			}
+			while(reslut[index3]*3 <= reslut[i]) {
+				index3++;
+			}
+			while(reslut[index5]*5 <= reslut[i]) {
+				index5++;
+			}
+			
+		}
+		
+		return reslut[index-1];
+	}
+```
+
